add_library(
  nano_store
  account.hpp
  block.hpp
  component.hpp
  confirmation_height.hpp
  db_val.hpp
  db_val_impl.hpp
  iterator.hpp
  iterator_impl.hpp
  final.hpp
  lmdb/account.hpp
  lmdb/block.hpp
  lmdb/confirmation_height.hpp
  lmdb/db_val.hpp
  lmdb/final_vote.hpp
  lmdb/iterator.hpp
  lmdb/lmdb.hpp
  lmdb/lmdb_env.hpp
  lmdb/iterator.hpp
  lmdb/transaction_impl.hpp
  lmdb/online_weight.hpp
  lmdb/peer.hpp
  lmdb/pending.hpp
  lmdb/pruned.hpp
  lmdb/rep_weight.hpp
  lmdb/transaction_impl.hpp
  lmdb/utility.hpp
  lmdb/version.hpp
  lmdb/wallet_value.hpp
  online_weight.hpp
  peer.hpp
  pending.hpp
  pruned.hpp
  rocksdb/account.hpp
  rocksdb/block.hpp
  rocksdb/confirmation_height.hpp
  rocksdb/db_val.hpp
  rocksdb/final_vote.hpp
  rocksdb/iterator.hpp
  rocksdb/online_weight.hpp
  rocksdb/peer.hpp
  rocksdb/pending.hpp
  rocksdb/pruned.hpp
  rocksdb/rep_weight.hpp
  rocksdb/rocksdb.hpp
  rocksdb/iterator.hpp
  rocksdb/transaction_impl.hpp
  rocksdb/version.hpp
  tables.hpp
  transaction.hpp
  version.hpp
  versioning.hpp
  account.cpp
  block.cpp
  component.cpp
  confirmation_height.cpp
  db_val.cpp
  iterator.cpp
  iterator_impl.cpp
  final.cpp
  lmdb/account.cpp
  lmdb/block.cpp
  lmdb/confirmation_height.cpp
  lmdb/db_val.cpp
  lmdb/final_vote.cpp
  lmdb/lmdb.cpp
  lmdb/lmdb_env.cpp
  lmdb/transaction.cpp
  lmdb/online_weight.cpp
  lmdb/peer.cpp
  lmdb/pending.cpp
  lmdb/pruned.cpp
  lmdb/rep_weight.cpp
  lmdb/utility.cpp
  lmdb/version.cpp
  lmdb/wallet_value.cpp
  online_weight.cpp
  peer.cpp
  pending.cpp
  pruned.cpp
  rocksdb/account.cpp
  rocksdb/block.cpp
  rocksdb/confirmation_height.cpp
  rocksdb/db_val.cpp
  rocksdb/final_vote.cpp
  rocksdb/online_weight.cpp
  rocksdb/peer.cpp
  rocksdb/pending.cpp
  rocksdb/pruned.cpp
  rocksdb/rep_weight.cpp
  rocksdb/rocksdb.cpp
  rocksdb/transaction.cpp
  rocksdb/version.cpp
  transaction.cpp
  version.cpp
  versioning.cpp
  write_queue.hpp
  write_queue.cpp)

target_link_libraries(
  nano_store
  nano_lib
  Boost::circular_buffer
  Boost::endian
  Boost::iostreams
  Boost::multiprecision
  Boost::pool
  Boost::stacktrace
  Boost::variant)
